# environment

./: .gitignore  .gitlab-ci.yml  .gitmodules  .projectile  .tool-versions  .travis.yml  CONTRIBUTING.org  Dockerfile  Linkfile  Melkor.hs  README.md  README.org  Repofile  bootstrap  bootstrap.sh  eru-new.sh  eru.sh  flake.nix  install  install.conf.yaml  install.sh  mimeapps.list  package.yaml  stack.yaml  starship.toml  switch_emacs.sh  switch_to.sh
Melkor/: Core.hs  Prelude.hs  Provider.hs
Test/: Build.hs
alacritty/: alacritty.toml
arch/: Aurfile  Aurfile_borysb  Linkfile  Pacmanfile  Pacmanignore_borysb  README.org  lock@.service
bash/: Linkfile_linux  bashrc_linux
bootstrap/: Brewfile  Linkfile  Linkfile_linux  Pacmanfile  README.org  Repofile  eru.sh  manwe.sh
bootstrap/melkor/: LICENSE  README.md  melkor.cabal  stack.yaml
brew/: .gitignore  Brewfile  example-hostname.Brewfile  example-user.Brewfile
chunkwm/: chunkwmrc
claude/: CLAUDE.md  notify.sh  settings.json  statusline-command.sh
docs/: vulpea-sync.md
doom/: config.el  init.el  packages.el
dunst/: dunstrc
emacs/: .dir-locals.el  .gitignore  .spacemacs  Eldev  Linkfile  Makefile  README.org  bootstrap  bootstrap.el  d12-init.el  d12frosted.el  dna.el  early-init.el  emacs-profiles.el  emacs_starter.pl  init-new.el  init-old.el  init.el  setup.sh  spacemacs  spacemacs.el  switch_emacs  test.el
emacs-plus/: build.yml
email/: .mbsyncrc  .msmtprc  com.d12frosted.melkor.plist  com.d12frosted.saruman.plist  com.d12frosted.sauron.plist  gendalf.sh
enchant/: enchant.ordering
firefox/: userChrome.css
fish/: .gitignore  README.org  bootstrap  config.fish  fishfile  nix_fish_env.sh  readme.md
fontconfig/: fonts.conf
gh/: hosts.yml
ghostty/: config
git/: .gitignore_global  README.org  config  config_personal  config_work  configure.sh  gitconfig  ignore
gnupg/: Linkfile  README.md  dirmngr.conf.example  gpg-agent-linux.conf  gpg-agent.conf  gpg.conf  pam_environment
gtk-3.0/: settings.ini
hammerspoon/: init.lua
haskell/: .ghci  Linkfile  README.org  bootstrap  cabal-config  stack-global.yaml  stack.yaml
kitty/: kitty.conf
launchd/: io.d12frosted.private-sync.plist  io.d12frosted.vulpea-sync.plist  io.d12frosted.vulpea-watch.plist
macos/: Brewfile  Linkfile  README.org  defaults.sh  terminal.sh
maven/: Linkfile  mavenrc
melkor/: Dockerfile  package.yaml  stack.yaml
modules/: darwin.nix  home.nix  packages.nix
mpv/: mpv.conf
networkmanager-dmenu/: config.ini
nix/: alacritty.nix  darwin.nix  hardware-configuration.nix  home.nix  linux.nix  nixos.nix  packages.nix  yabai.nix
osx/: configure.sh
scala/: Linkfile  plugins.sbt
skhd/: skhdrc
spacemacs/: init.el  spacemacs  spacemacs-test.el  spacemacs.el
ssh/: README.md  config
taffybar/: d12-taffybar.cabal  package.yaml  stack.yaml  taffybar.css  taffybar.hs
terminal-themes/: README.org  d12_tomorrow.terminal  d12_tomorrow_night.terminal  (+2 more)
utils/dump/: LICENSE  README.org  dump.cabal
utils/dump/app/: Main.hs
utils/dump/src/: Dump.hs  Main.hs
utils/dump/test/: Spec.hs
(+1059 files in other folders)
