name:                melkor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d12frosted/melkor#readme
license:             BSD3
license-file:        LICENSE
author:              Boris Buliga
maintainer:          boris@d12frosted.io
copyright:           2017 Boris Buliga
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable melkor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
