name:                melkor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d12frosted/environment/bootstrap/melkor#readme
license:             BSD3
license-file:        LICENSE
author:              Boris Buliga
maintainer:          boris@d12frosted.io
copyright:           2017 Boris Buliga
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable             Melkor
  hs-source-dirs:      app
  main-is:             Melkor.hs
  -- other-modules:
  default-language:    Haskell2010
  build-depends:       base
