name:                dump
version:             0.1.0.0
synopsis:            Utility for dumping files
description:         Please see README.org
homepage:            http://github.com/d12frosted/environment
license:             BSD3
license-file:        LICENSE
author:              Boris Buliga
maintainer:          d12frosted@icloud.com
copyright:           2015 Boris Buliga
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org
                     stack.yaml

executable dump
  hs-source-dirs:      src/
  ghc-options:         -Wall
  other-modules:       Paths_dump
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude >= 0.5
                     , optparse-applicative >= 0.11.0.2
                     , optparse-simple >= 0.0.3
                     , system-filepath >= 0.4.13.4
                     , time >= 1.5.0.1
                     , turtle >= 1.2.1
